# Terminaux

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGES  CHANGES.TITLE  CODE_OF_CONDUCT.md  Directory.Build.props  LICENSE  LICENSE.BenchmarkDotNet  Makefile  README.md  TermRead.sln  Terminaux.sln  Terminaux.slnx  appveyor.yml  index.html  index.json  manifest.json  sitemap.xml  toc.html  toc.json  xrefmap.yml
.github/: issue_template.md  pull_request_template.md
DocGen/: docfx.json  index.md
TermRead/: TermRead.csproj
TermRead.Console/: Entry.cs  SimpleDemo.cs  TermRead.ConsoleDemo.csproj
TermRead.Tests/: TermRead.Tests.csproj  VtSequenceBuilderTests.cs  VtSequenceToolsTests.cs
Terminaux.ColorDataGen/: ColorPropGen.cs  Terminaux.ColorDataGen.csproj
Terminaux.Console/: Entry.cs  Terminaux.Console.csproj  Terminaux.ConsoleDemo.csproj
Terminaux.Extensions/: Terminaux.Extensions.csproj
Terminaux.Figgle/: FiggleTools.cs  FigletSelector.cs  Terminaux.Figgle.csproj
Terminaux.Images/: ImageProcessor.cs  Terminaux.Images.csproj
Terminaux.NerdFontGen/: NerdFontListGen.cs  Terminaux.NerdFontGen.csproj
Terminaux.ResizeListener/: ConsoleResizeListener.cs  Terminaux.ResizeListener.csproj
Terminaux.SequenceTypesGen/: SequenceTypeGen.cs  Terminaux.SequenceTypesGen.csproj
Terminaux.Spectre/: Class1.cs  Terminaux.Spectre.csproj
Terminaux.TermInfo.Cli/: Program.cs  Terminaux.TermInfo.Cli.csproj
assets/libWinchHandler/: CMakeLists.txt
assets/libWinchHandler/include/: winchhandler.h
assets/libWinchHandler/src/: winchhandler.c
(+4299 files in other folders)
